// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`presets > c 1`] = `
[
  {
    "formatters": true,
    "javascript": {
      "overrides": {
        "curly": [
          "error",
          "all",
        ],
        "no-console": [
          "warn",
        ],
        "no-unused-vars": "off",
      },
    },
    "typescript": {
      "overrides": {
        "ts/ban-ts-comment": "off",
        "ts/no-unused-expressions": [
          "error",
          {
            "allowShortCircuit": true,
            "allowTernary": true,
          },
        ],
        "ts/no-unused-vars": [
          "error",
          {
            "args": "all",
            "argsIgnorePattern": "^_",
            "caughtErrors": "all",
            "caughtErrorsIgnorePattern": "^_",
            "destructuredArrayIgnorePattern": "^_",
            "ignoreRestSiblings": true,
            "varsIgnorePattern": "^_",
          },
        ],
        "ts/no-use-before-define": "warn",
        "ts/prefer-ts-expect-error": "off",
      },
    },
  },
  {
    "rules": {
      "unused-imports/no-unused-vars": "off",
    },
  },
]
`;

exports[`presets > c0 1`] = `
[
  {
    "a11y": true,
    "formatters": true,
    "javascript": {
      "overrides": {
        "curly": [
          "error",
          "all",
        ],
        "no-console": [
          "warn",
        ],
        "no-unused-vars": "off",
      },
    },
    "typescript": {
      "overrides": {
        "ts/ban-ts-comment": "off",
        "ts/no-unused-expressions": [
          "error",
          {
            "allowShortCircuit": true,
            "allowTernary": true,
          },
        ],
        "ts/no-unused-vars": [
          "error",
          {
            "args": "all",
            "argsIgnorePattern": "^_",
            "caughtErrors": "all",
            "caughtErrorsIgnorePattern": "^_",
            "destructuredArrayIgnorePattern": "^_",
            "ignoreRestSiblings": true,
            "varsIgnorePattern": "^_",
          },
        ],
        "ts/no-use-before-define": "warn",
        "ts/prefer-ts-expect-error": "off",
      },
    },
  },
  {
    "rules": {
      "unused-imports/no-unused-vars": "off",
    },
  },
]
`;

exports[`presets > c1 1`] = `
[
  {
    "formatters": true,
    "javascript": {
      "overrides": {
        "curly": [
          "error",
          "all",
        ],
        "no-console": [
          "warn",
        ],
        "no-unused-vars": "off",
      },
    },
    "typescript": {
      "overrides": {
        "ts/ban-ts-comment": "off",
        "ts/no-unused-expressions": [
          "error",
          {
            "allowShortCircuit": true,
            "allowTernary": true,
          },
        ],
        "ts/no-unused-vars": [
          "error",
          {
            "args": "all",
            "argsIgnorePattern": "^_",
            "caughtErrors": "all",
            "caughtErrorsIgnorePattern": "^_",
            "destructuredArrayIgnorePattern": "^_",
            "ignoreRestSiblings": true,
            "varsIgnorePattern": "^_",
          },
        ],
        "ts/no-use-before-define": "warn",
        "ts/prefer-ts-expect-error": "off",
      },
    },
    "vue": {
      "overrides": {
        "vue/attribute-hyphenation": "off",
        "vue/custom-event-name-casing": "off",
        "vue/no-mutating-props": "warn",
        "vue/no-unused-refs": "warn",
        "vue/no-useless-v-bind": [
          "error",
          {
            "ignoreIncludesComment": false,
            "ignoreStringEscape": true,
          },
        ],
        "vue/no-v-for-template-key": "off",
        "vue/no-v-for-template-key-on-child": "error",
        "vue/v-on-event-hyphenation": "off",
      },
    },
  },
  {
    "rules": {
      "unused-imports/no-unused-vars": "off",
    },
  },
]
`;

exports[`presets > c2 1`] = `
[
  {
    "formatters": true,
    "javascript": {
      "overrides": {
        "curly": [
          "error",
          "all",
        ],
        "no-console": [
          "warn",
        ],
        "no-unused-vars": "off",
      },
    },
    "typescript": {
      "overrides": {
        "ts/ban-ts-comment": "off",
        "ts/no-unused-expressions": [
          "error",
          {
            "allowShortCircuit": true,
            "allowTernary": true,
          },
        ],
        "ts/no-unused-vars": [
          "error",
          {
            "args": "all",
            "argsIgnorePattern": "^_",
            "caughtErrors": "all",
            "caughtErrorsIgnorePattern": "^_",
            "destructuredArrayIgnorePattern": "^_",
            "ignoreRestSiblings": true,
            "varsIgnorePattern": "^_",
          },
        ],
        "ts/no-use-before-define": "warn",
        "ts/prefer-ts-expect-error": "off",
      },
    },
    "vue": {
      "overrides": {
        "vue/attribute-hyphenation": "off",
        "vue/custom-event-name-casing": "off",
        "vue/no-mutating-props": "warn",
        "vue/no-unused-refs": "warn",
        "vue/no-useless-v-bind": [
          "error",
          {
            "ignoreIncludesComment": false,
            "ignoreStringEscape": true,
          },
        ],
        "vue/no-v-for-template-key": "off",
        "vue/no-v-for-template-key-on-child": "error",
        "vue/v-on-event-hyphenation": "off",
      },
      "vueVersion": 3,
    },
  },
  {
    "rules": {
      "unused-imports/no-unused-vars": "off",
    },
  },
]
`;

exports[`presets > c3 1`] = `
[
  {
    "formatters": true,
    "javascript": {
      "overrides": {
        "curly": [
          "error",
          "all",
        ],
        "no-console": [
          "warn",
        ],
        "no-unused-vars": "off",
      },
    },
    "typescript": {
      "overrides": {
        "ts/ban-ts-comment": "off",
        "ts/no-unused-expressions": [
          "error",
          {
            "allowShortCircuit": true,
            "allowTernary": true,
          },
        ],
        "ts/no-unused-vars": [
          "error",
          {
            "args": "all",
            "argsIgnorePattern": "^_",
            "caughtErrors": "all",
            "caughtErrorsIgnorePattern": "^_",
            "destructuredArrayIgnorePattern": "^_",
            "ignoreRestSiblings": true,
            "varsIgnorePattern": "^_",
          },
        ],
        "ts/no-use-before-define": "warn",
        "ts/prefer-ts-expect-error": "off",
      },
    },
    "vue": {
      "overrides": {
        "vue/attribute-hyphenation": "off",
        "vue/custom-event-name-casing": "off",
        "vue/no-deprecated-v-bind-sync": "off",
        "vue/no-mutating-props": "warn",
        "vue/no-unused-refs": "warn",
        "vue/no-useless-v-bind": [
          "error",
          {
            "ignoreIncludesComment": false,
            "ignoreStringEscape": true,
          },
        ],
        "vue/no-v-for-template-key": "error",
        "vue/no-v-for-template-key-on-child": "off",
        "vue/v-on-event-hyphenation": "off",
      },
      "vueVersion": 2,
    },
  },
  {
    "rules": {
      "unused-imports/no-unused-vars": "off",
    },
  },
]
`;
